--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "19.1.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
