--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
-    "next": "15.4.5",
+    "next": "^16.1.6",
     "next-cloudinary": "^6.16.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.1",
